--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth": "^2.0.0",
     "validator": "^13.12.0"
   }
 }
