--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,10 @@
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
+    "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
     "passport-google-oauth": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "validator": "^13.12.0"
   }
 }
