--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.4",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
